--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/x-icon" href="images/IMG_4302.jpg">
+    <link rel="icon" type="image/x-icon" href="/IMG_4302.jpg">
     <title>CHROME EXTENSION</title>
 </head>
 <body>
