--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="icon" type="image/x-icon" href="/IMG_4302.jpg">
+    <link rel="icon" type="image/x-icon" href="IMG_4302.jpg">
     <title>CHROME EXTENSION</title>
 </head>
 <body>
     <H1>CHROME EXTENSION BOYS UP!!!</H1>
+    <p id="welcome-El"></p>
     <input type="text" id="input-el">
     <br>
     <button id="input-btn"> SAVE INPUT </button>
+    <button id="save-tab"> SAVE TAB </button>
+    <button id="clear-all"> CLEAR ALL </button>
     <ul id="ul-el"><li></li></ul>
     <br>
-    <div onclick="paragraph()" id="buy-button"></div>
     <script src="index.js"></script>
 </body>
 </html>
